--- a/debian/console-setup-linux.console-setup.service
+++ b/debian/console-setup-linux.console-setup.service
@@ -2,6 +2,7 @@
 Description=Set console font and keymap
 DefaultDependencies=no
 After=console-screen.service kbd.service local-fs.target
+Before=display-manager.service
 RequiresMountsFor=/usr
 ConditionPathExists=/bin/setupcon
 
