--- a/debian/control
+++ b/debian/control
@@ -1,19 +1,19 @@
 Source: console-setup
 Section: utils
 Priority: optional
-Maintainer: Deepin Developer <deepin-dev@deepin.org>
-Uploaders: Deepin Packages Builder <packages@deepin.org>
+Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
+Uploaders: Anton Zinoviev <zinoviev@debian.org>
 Build-Depends-Indep: xkb-data (>= 1.6), locales-all, sharutils
-Build-Depends: perl, debhelper (>= 9.20160709), po-debconf, libxml-parser-perl, bdfresize, liblocale-gettext-perl
+Build-Depends: perl, debhelper (>= 9.20160709), po-debconf, libxml-parser-perl, bdfresize, liblocale-gettext-perl, unifont, unifont-bin
 Standards-Version: 3.9.1
-#Vcs-Browser
-#Vcs-Git
+Vcs-Browser: https://salsa.debian.org/installer-team/console-setup
+Vcs-Git: https://salsa.debian.org/installer-team/console-setup.git
 
 Package: keyboard-configuration
 Architecture: all
 Multi-Arch: foreign
-Depends: ${misc:Depends}, liblocale-gettext-perl
-Pre-Depends: debconf (>= 1.5.34)
+Depends: ${misc:Depends}, liblocale-gettext-perl, xkb-data (>= ${xkb-data:Version}~), xkb-data (<< ${xkb-data:Version}A)
+Pre-Depends: debconf | debconf-2.0
 Breaks: console-setup (<< 1.71), console-setup-mini (<< 1.47)
 Replaces: console-setup (<< 1.47), console-setup-mini (<< 1.47)
 Description: system-wide keyboard preferences
@@ -25,7 +25,7 @@ Description: system-wide keyboard preferences
 Package: console-setup
 Architecture: all
 Multi-Arch: foreign
-Pre-Depends: debconf (>= 1.5.34)
+Pre-Depends: debconf | debconf-2.0
 Depends: console-setup-linux | console-setup-freebsd | hurd, xkb-data (>= 0.9), keyboard-configuration (= ${source:Version}), ${misc:Depends}
 Suggests: lsb-base (>= 3.0-6), locales
 Conflicts: console-setup-mini
